[package]
name = "btor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aig = { path = "../aig-rs", version = "0.3.0" }
giputils = { path = "../giputils", version = "0.3.0" }
fol = { path = "../fol" }
num-bigint = "0.4.5"
num-traits = "0.2.19"
strum = { version = "0.26.2", features = ["derive"] }
