[package]
name = "btor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
giputils = { path = "../giputils", version = "0.3.3" }
logicrs = { path = "../logicrs", version = "0.5.1" }
num-bigint = "0.4.5"
num-traits = "0.2.19"
strum = { version = "0.27.1", features = ["derive"] }
