[package]
name = "btor"
version = "0.2.2"
license = "MIT"
description = "Rust library for parsing and deparsing BTOR files"
edition = "2024"
repository = "https://github.com/gipsyh/btor-rs"
authors = ["Yuheng Su <gipsyh.icu@gmail.com>"]
keywords = ["formal_method", "model_checking"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
giputils = { path = "../giputils", version = "0.3.6" }
logicrs = { path = "../logicrs", version = "0.6.1" }
num-bigint = "0.4.5"
num-traits = "0.2.19"
strum = { version = "0.27.1", features = ["derive"] }
